# SCA-LDPC

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  run-parallel-hqc-simulation.sh  test-hqc128.key  test-hqc192.key  test-hqc256.key  view_pgf.tex  watch-build-rust.sh
simulate-with-python/: binary_distr.txt  ldpc_decode.py  main.py  ntru_simulations.py  qary_distr.txt  requirements.txt  setup-environment.sh  to_be_decoded.txt  update-requirements.sh
simulate-with-python/simulate/: adaptive_tree_coding.py  decode.py  distance_spectrum.py  hqc.py  hqc_eval_oracle.py  information_theoretic_coding_utils.py  kyber.py  make_code.py  max_likelihood.py  utils.py  visualize.py
simulate-with-python/simulate_rs/: Cargo.toml  pyproject.toml
simulate-with-python/simulate_rs/benches/: decoder.rs  parity_check_150_450.txt
simulate-with-python/simulate_rs/src/: configurations.py  decode.rs  decoder.rs  decoder_special.rs  hqc.rs  lib.rs  pydecoder.rs
simulate-with-rust/: Cargo.toml
simulate-with-rust/src/: main.rs
