[package]
name = "simulate_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simulate_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module", "anyhow"] }
pyo3-log = "0.6.0"
log = "0.4.16"
anyhow = "1.0.56"